# stepic_programming_intro_cplusplus

./: .gitignore  CMakeLists.txt  README.md  main.cpp
module1/first_digit/: first_digit.cpp
module1/hello_stepic/: hello_stepic.cpp
module1/next_even/: next_even.cpp
module1/number_of_tens/: number_of_tens.cpp
module1/snail/: snail.cpp
module1/squirrel_and_nuts_1/: squirrel_and_nuts_1.cpp
module1/squirrel_and_nuts_2/: squirrel_and_nuts_2.cpp
src/: CMakeLists.txt
src/module1/desks/: desks.cpp
src/module1/digits_sum/: digits_sum.cpp
src/module1/electric_watch/: electric_watch.cpp
src/module1/first_digit/: first_digit.cpp  first_digit.h
src/module1/last_digit/: last_digit.cpp  last_digit.h
src/module1/mkad/: mkad.cpp
src/module1/time_diff/: time_diff.cpp
src/module2/boxes/: boxes.cpp
src/module2/chess_alfin/: chess_alfin.cpp
src/module2/chess_castle/: chess_castle.cpp
src/module2/chess_king/: chess_king.cpp
src/module2/chess_knight/: chess_knight.cpp
src/module2/chess_queen/: chess_queen.cpp
src/module2/compare_numbers/: compare_numbers.cpp
src/module2/compare_three_numbers/: compare_three_numbers.cpp
src/module2/conditional_operator/: conditional_operator.cpp
src/module2/pool/: pool.cpp
src/module2/sorting/: sorting.cpp
src/module3/count_numbers/: count_numbers.cpp
src/module3/equal_sequence/: equal_sequence.cpp
src/module3/equal_to_max/: equal_to_max.cpp
src/module3/fibonacci/: fibonacci.cpp
src/module3/found_fibonacci/: found_fibonacci.cpp
src/module3/if_power_of_two/: if_power_of_two.cpp
src/module3/lcd/: lcd.cpp  lcd.h  main.cpp
src/module3/local_max/: local_max.cpp
src/module3/local_min_distance/: local_min_distance.cpp
src/module3/max_number/: max_number.cpp
src/module3/number_sum/: number_sum.cpp
src/module3/power_of_two/: power_of_two.cpp
src/module3/second_max/: second_max.cpp
src/module3/squared_ints/: squared_ints.cpp
src/module4/average/: average.cpp
src/module4/complex_percent/: complex_percent.cpp
src/module4/complex_percent_2/: complex_percent_2.cpp
src/module4/equationSet/: equation_set.cpp
src/module4/equation_set_2/: equation_set_2.cpp
src/module4/first_fraction_digit/: first_fraction_digit.cpp
src/module4/fraction_part/: fraction_part.cpp
src/module4/polynome/: polynome.cpp
src/module4/quadratic_equation/: quadratic_equation.cpp
src/module4/quadratic_equation_2/: quadratic_equation_2.cpp
src/module4/standard_deviation/: standard_deviation.cpp
src/module4/triangle_square/: triangle_square.cpp
src/module5/count_pairs/: count_pairs.cpp
src/module5/even_elements/: even_elements.cpp
src/module5/even_indexes/: even_indexes.cpp
src/module5/greater_prev/: greater_prev.cpp
src/module5/least_odd/: least_odd.cpp
src/module5/least_positive/: least_positive.cpp
src/module5/positive_elements/: positive_elements.cpp
src/module5/queens/: queens.cpp
src/module5/replace/: replace.cpp
src/module5/same_sign/: same_sign.cpp
src/module5/shift/: shift.cpp
src/module5/single_element/: single_element.cpp
src/module5/skittles/: skittles.cpp
src/module5/unique_elements/: unique_elements.cpp
stepic/: CMakeLists.txt
stepic/module1/first_digit/: first_digit.h
stepic/module1/pie_buying/: pie_buying.cpp
stepic/module1/symmetric_number/: symmetric_number.cpp
stepic/module2/chocolate/: chocolate.cpp
stepic/module2/equal_numbers/: equal_numbers.cpp
stepic/module2/triangle/: triangle.cpp
stepic_tests/: CMakeLists.txt
stepic_tests/tests/: CMakeLists.txt
stepic_tests/tests/module1/first_digit/: test_first_digit.cpp
tests/: CMakeLists.txt
tests/tests/: CMakeLists.txt
tests/tests/module1/last_digit/: test_last_digit.cpp
tests/tests/module3/lcd/: test_lcd.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/chess_knight/: test_chess_knight.cpp
