cmake_minimum_required(VERSION 3.5)
project(StepicCPlusPlus)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES main.cpp)
add_executable(evenIndexes src/module5/even_indexes/even_indexes.cpp)
add_executable(evenElements src/module5/even_elements/even_elements.cpp)
add_executable(positiveElements src/module5/positive_elements/positive_elements.cpp)
add_executable(greaterPrev src/module5/greater_prev/greater_prev.cpp)
add_executable(sameSign src/module5/same_sign/same_sign.cpp)
add_executable(leastPositive src/module5/least_positive/least_positive.cpp)
add_executable(leastOdd src/module5/least_odd/least_odd.cpp)
add_executable(uniqueElements src/module5/unique_elements/unique_elements.cpp)
add_executable(replace src/module5/replace/replace.cpp)
add_executable(shift src/module5/shift/shift.cpp)
add_executable(countPairs src/module5/count_pairs/count_pairs.cpp)
add_executable(singleElement src/module5/single_element/single_element.cpp)
add_executable(queens src/module5/queens/queens.cpp)
add_executable(skittles src/module5/skittles/skittles.cpp)

include_directories(src)

add_subdirectory(src)
add_subdirectory(tests)
